Ajout d'une fonction data() permettant de mettre à jour les données depuis une base Access embarquée

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(charger_rdata)
 export(concatener_fichiers)
 export(conv_lib_num_mois)
 export(creer_repertoire)
+export(data)
 export(date_jour)
 export(doublons)
 export(extension_fichier)
