Ajout de la fonction dependances_package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(conv_lib_num_mois)
 export(creer_repertoire)
 export(data)
 export(date_jour)
+export(dependances_package)
 export(doublons)
 export(extension_fichier)
 export(extraire_fichiers_zip)
