Ajout de la fonction count_agregats

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(charger_rdata)
 export(concatener_fichiers)
 export(construction_package)
 export(conv_lib_num_mois)
+export(count_agregats)
 export(creer_repertoire)
 export(data)
 export(date_jour)
