fonction data : même nom de fonction que le package utils -> generer_data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,13 +6,13 @@ export(construction_package)
 export(conv_lib_num_mois)
 export(count_agregats)
 export(creer_repertoire)
-export(data)
 export(date_jour)
 export(dependances_package)
 export(doublons)
 export(extension_fichier)
 export(extraire_fichiers_zip)
 export(extraire_masse_zip)
+export(generer_data)
 export(initialiser_cluster)
 export(mois_ecoules)
 export(mongo_daemon)
