Création de la fonction remplacer_na

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(extraire_fichiers_zip)
 export(extraire_masse_zip)
 export(initialiser_cluster)
 export(mongo_daemon)
+export(remplacer_na)
 export(stopper_cluster)
 export(supprimer_repertoire)
 export(vider_repertoire)
