Ajout de la fonction maj_champ

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(extension_fichier)
 export(extraire_fichiers_zip)
 export(extraire_masse_zip)
 export(initialiser_cluster)
+export(maj_champ)
 export(mongo_daemon)
 export(remplacer_na)
 export(stopper_cluster)
