Création de la fonction remplacer_si

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(initialiser_cluster)
 export(maj_champ)
 export(mongo_daemon)
 export(remplacer_na)
+export(remplacer_si)
 export(stopper_cluster)
 export(supprimer_repertoire)
 export(vider_repertoire)
