Suppression de la dépendance magrittr car dplyr est déjà présent

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,4 +20,4 @@ export(remplacer_si)
 export(stopper_cluster)
 export(supprimer_repertoire)
 export(vider_repertoire)
-importFrom(magrittr,"%>%")
+importFrom(dplyr,"%>%")
