--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(doublons)
 export(extension_fichier)
 export(extraire_fichiers_zip)
 export(extraire_masse_zip)
+export(extraire_nom_fichier)
 export(initialiser_cluster)
 export(maj_champ)
 export(mongo_daemon)
