Ajout de la focntion extraire_chemin

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(creer_repertoire)
 export(dependances_package)
 export(doublons)
 export(extension_fichier)
+export(extraire_chemin)
 export(extraire_fichiers_zip)
 export(extraire_masse_zip)
 export(extraire_nom_fichier)
