Ajout de la fonction rechercher_code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(extraire_nom_fichier)
 export(initialiser_cluster)
 export(maj_champ)
 export(mongo_daemon)
+export(rechercher_code)
 export(remplacer_na)
 export(remplacer_si)
 export(stopper_cluster)
