Ajout de la fonction remplacer_code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(initialiser_cluster)
 export(maj_champ)
 export(mongo_daemon)
 export(rechercher_code)
+export(remplacer_code)
 export(remplacer_na)
 export(remplacer_si)
 export(stopper_cluster)
