--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 export("%>%")
 export(anti_join_bind)
-export(charger_rdata)
 export(concatener_fichiers)
 export(construction_package)
 export(count_agregats)
@@ -15,6 +14,7 @@ export(extraire_fichiers_zip)
 export(extraire_masse_zip)
 export(extraire_nom_fichier)
 export(initialiser_cluster)
+export(load_rdata)
 export(maj_champ)
 export(mongo_daemon)
 export(rechercher_code)
