Anglicisation de doublons -> duplicate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(construction_package)
 export(count_agregats)
 export(creer_repertoire)
 export(dependances_package)
-export(doublons)
+export(duplicate)
 export(extension_fichier)
 export(extraire_chemin)
 export(extraire_fichiers_zip)
