Anglicisation de remplacer_na -> patch_vector

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,9 +17,9 @@ export(initialiser_cluster)
 export(load_rdata)
 export(maj_champ)
 export(mongo_daemon)
+export(patch_vector)
 export(rechercher_code)
 export(remplacer_code)
-export(remplacer_na)
 export(remplacer_si)
 export(stopper_cluster)
 export(supprimer_repertoire)
