Anglicisation de depandances_packages -> package_deps

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ export(concatener_fichiers)
 export(construction_package)
 export(count_agregats)
 export(creer_repertoire)
-export(dependances_package)
 export(duplicate)
 export(extension_fichier)
 export(extraire_chemin)
@@ -16,6 +15,7 @@ export(extraire_nom_fichier)
 export(initialiser_cluster)
 export(load_rdata)
 export(mongo_daemon)
+export(package_deps)
 export(patch_vector)
 export(rechercher_code)
 export(remplacer_code)
