Anglicisation de rechercher_code -> code_search

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export("%>%")
 export(anti_join_bind)
+export(code_search)
 export(concatener_fichiers)
 export(construction_package)
 export(count_agregats)
@@ -17,7 +18,6 @@ export(load_rdata)
 export(mongo_daemon)
 export(package_deps)
 export(patch_vector)
-export(rechercher_code)
 export(remplacer_code)
 export(stopper_cluster)
 export(supprimer_repertoire)
