--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export("%>%")
 export(anti_join_bind)
+export(code_replace)
 export(code_search)
 export(concatener_fichiers)
 export(construction_package)
@@ -17,7 +18,6 @@ export(initialiser_cluster)
 export(load_rdata)
 export(package_deps)
 export(patch_vector)
-export(remplacer_code)
 export(stopper_cluster)
 export(supprimer_repertoire)
 export(vider_repertoire)
