Anglicisation de initialiser_cluster -> initialise_cluster

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,7 @@ export(extraire_chemin)
 export(extraire_fichiers_zip)
 export(extraire_masse_zip)
 export(extraire_nom_fichier)
-export(initialiser_cluster)
+export(initialise_cluster)
 export(load_rdata)
 export(package_deps)
 export(patch_vector)
