Anglicisation de stopper_cluster -> stop_cluster

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,7 @@ export(initialise_cluster)
 export(load_rdata)
 export(package_deps)
 export(patch_vector)
-export(stopper_cluster)
+export(stop_cluster)
 export(supprimer_repertoire)
 export(vider_repertoire)
 importFrom(dplyr,"%>%")
