fonctions cluster : renommées avec préfixe cl

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export("%>%")
 export(anti_join_bind)
+export(cl_initialise)
+export(cl_stop)
 export(code_find)
 export(code_replace)
 export(concatener_fichiers)
@@ -14,11 +16,9 @@ export(extraire_chemin)
 export(extraire_fichiers_zip)
 export(extraire_masse_zip)
 export(extraire_nom_fichier)
-export(initialise_cluster)
 export(load_rdata)
 export(package_deps)
 export(patch_vector)
-export(stop_cluster)
 export(supprimer_repertoire)
 export(vider_repertoire)
 importFrom(dplyr,"%>%")
