Anglicisation de extraire_fichiers_zip -> zip_extract_file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,9 @@ export(concatener_fichiers)
 export(construction_package)
 export(count_agregats)
 export(duplicate)
-export(extraire_fichiers_zip)
 export(extraire_masse_zip)
 export(load_rdata)
 export(package_deps)
 export(patch_vector)
+export(zip_extract_file)
 importFrom(dplyr,"%>%")
