Anglicisation de concatener_fichiers -> files_append

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,10 @@ export(cl_initialise)
 export(cl_stop)
 export(code_find)
 export(code_replace)
-export(concatener_fichiers)
 export(construction_package)
 export(count_agregats)
 export(duplicate)
+export(files_append)
 export(load_rdata)
 export(package_deps)
 export(patch_vector)
