--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,11 +6,11 @@ export(cl_initialise)
 export(cl_stop)
 export(code_find)
 export(code_replace)
-export(construction_package)
 export(count_agregats)
 export(duplicate)
 export(files_append)
 export(load_rdata)
+export(package_build)
 export(package_deps)
 export(patch_vector)
 export(zip_extract_file)
