Anglicisation de count_agregats -> count_agg

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(cl_initialise)
 export(cl_stop)
 export(code_find)
 export(code_replace)
-export(count_agregats)
+export(count_agg)
 export(duplicate)
 export(files_append)
 export(load_rdata)
