zip_extract_file : renommé en zip_extract

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,6 @@ export(load_rdata)
 export(package_build)
 export(package_deps)
 export(patch_vector)
-export(zip_extract_file)
+export(zip_extract)
 export(zip_extract_path)
 importFrom(dplyr,"%>%")
