Add MIT License

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R: person("Stéphane Le Hénanff", "Stéphane Le Hénanff", email = "git
 Description: Fonctions diverses utiles partout.
 Depends:
     R (>= 3.2.5)
-License: Etalab
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
