--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,10 +8,11 @@ Depends:
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.0.0
 Imports:
     dplyr,
     glue,
+    pagedown,
     purrr,
     rlang,
     stats
